# citra

./: .gitmodules  CMakeLists.txt
src/: CMakeLists.txt
src/citra_android/app/: build.gradle
src/citra_android/app/src/debug/res/values/: strings.xml
src/citra_android/app/src/main/: AndroidManifest.xml
src/citra_android/app/src/main/java/org/citraemu/citraemu/: CitraApplication.java  NativeLibrary.java
src/citra_android/app/src/main/java/org/citraemu/citraemu/activities/: AddDirectoryActivity.java  EmulationActivity.java
src/citra_android/app/src/main/res/color/: button_text_color.xml
src/citra_android/app/src/main/res/drawable-anydpi-v21/: ic_cached_white_24dp.xml  ic_settings_white_24dp.xml
src/citra_android/app/src/main/res/layout/: activity_add_directory.xml  activity_emulation.xml  card_game.xml  dialog_game_details.xml  fragment_emulation.xml  fragment_ingame_menu.xml  fragment_input_gc_list.xml
src/citra_android/app/src/main/res/layout-television/: activity_emulation.xml  fragment_emulation.xml
src/citra_android/app/src/main/res/menu/: menu_emulation.xml  menu_game_grid.xml  menu_settings.xml
src/citra_android/app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  styles.xml
src/citra_android/app/src/main/res/xml/: audio.xml  general.xml  graphics.xml  preferences_headers.xml  system.xml
src/citra_android/jni/: ButtonManager.cpp  CMakeLists.txt  MainAndroid.cpp
src/common/: file_util.cpp
src/core/: CMakeLists.txt  core.cpp
src/core/loader/: smdh.cpp  smdh.h
(+59 files in other folders)
